[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["z-kuznetsova <kuznetcova7015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
